<resources>
    <string name="app_name">Light</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="balance">Balance</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="test">testing text</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="your_orders">Your Orders</string>
    <string name="deals">Latest deals</string>
    <string name="more">More</string>
    <string name="cart">Cart</string>
    <string name="notes">Notes</string>
    <string name="favourites">Favourites</string>
    <string name="restaurants">Restaurants</string>
    <string name="meals">Meals</string>
    <string name="name">name</string>
    <string name="description">Description</string>
    <string name="place_holder">\t Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="rate_this_meal">Rate this meal</string>
    <string name="write_a_review">Write a review</string>
    <string name="rates_and_reviews">Rates and reviews</string>
    <string name="testing_num">2.5</string>
    <string name="light_caption">Light travels in a vacuum at 300,000 km per second.</string>

    <!-- description of images -->
    <string name="meal_image">meal image</string>
    <string name="diagram">diagram</string>
    <string name="meal_type_icon">meal type icon</string>

</resources>
