<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="120dp"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/meal_image"
            android:scaleType="centerCrop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="@color/white">

            <TextView
                android:layout_above="@id/offer_meal_rating"
                android:id="@+id/offer_meal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/test"
                android:textSize="16sp" />

            <ImageView
                android:layout_alignParentBottom="true"
                android:id="@+id/item_star"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/offer_meal_rating"
                android:contentDescription="@string/diagram"
                android:src="@drawable/ic_star_black_24dp" />

            <TextView
                android:id="@+id/offer_meal_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="3dp"
                android:text="@string/testing_num"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/offer_meal_deal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/offer_meal_name"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="3dp"
                android:text="25%"
                android:textSize="12sp" />

        </RelativeLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>