<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/meal_item_icon"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/circle_layout"
            android:backgroundTint="@color/gray"
            android:contentDescription="@string/meal_type_icon" />

        <TextView
            android:maxLines="1"
            android:id="@+id/order_date_or_meal_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="7dp"
            android:layout_toEndOf="@id/meal_item_icon"
            android:text="@string/name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/order_meal_restaurant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_date_or_meal_name"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/meal_item_icon"
            android:text="@string/name"
            android:textSize="16sp" />

        <TextView
            android:gravity="end"
            android:layout_toEndOf="@id/order_date_or_meal_name"
            android:id="@+id/order_total_price_or_meal_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:text="@string/testing_num"
            android:textColor="@color/green"
            android:textSize="20sp" />

    </RelativeLayout>

</android.support.v7.widget.CardView>